Converted project to non-modular due to incompatibilities with spring-web